# llm-jp-eval-inference

./: .gitignore  .pre-commit-config.yaml  README.md  README_en.md  pyproject.toml
.github/workflows/: lint_and_test.yml
inference-modules/transformers/: README.md  README_en.md  config_offline_inference_transformers.yaml  config_sample.yaml  eval.sh  inference.py  offline_inference_transformers.py  pyproject.toml  run.sh  schemas.py
inference-modules/trtllm/: Dockerfile  README.md  README_en.md  build_and_eval.sh  config.yaml  config_offline_inference_trtllm.yaml  eval.sh  inference.py  offline_inference_trtllm.py  pyproject.toml  schemas.py
inference-modules/vllm/: README.md  README_en.md  config_offline_inference_vllm.yaml  config_sample.yaml  eval.sh  inference.py  pyproject.toml  schemas.py
llm-jp-eval-inference/transformers/: README.md
llm-jp-eval-inference/trtllm/: eval.sh
src/llm_jp_eval_inference/: generator.py  schemas.py  transformers_schemas.py  utility.py
src/wandb_run_management/: rename_runs.py
