[project]
name = "llm-jp-eval-inference"
version = "0.0.1"
description = "Inference Module for llm-jp-eval"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "pydantic>=2.10.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_jp_eval_inference"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.9.1",
]

[tool.uv.workspace]
members = ["inference-modules/transformers"]
