[project]
name = "llm-jp-eval-inference"
version = "0.0.1"
description = "Inference Module for llm-jp-eval"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pydantic>=2.10.6",
    "llm-jp-eval",
    # istallation error occurs with 5.3.1
    "lxml <= 5.3.0"
]

[tool.uv.sources]
llm-jp-eval = { git = "https://github.com/llm-jp/llm-jp-eval", tag = "v2.0.0-beta" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_jp_eval_inference"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.9.1",
    "mypy~=v1.7.0",
    "pydantic[mypy]>=2.10.6",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
# Enable pycodestyle (E), Pyflakes (F), flake8-bugbear (B), isort (I)
select = ["E", "F", "B", "I"]
ignore = [
    "E203",  # Whitespace before ':' (black formats differently)
    "E501",  # Line too long
]
# Assumes Python 3.9-3.12 same as black config

# Exclude files and directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint.isort]
lines-between-types = 1
force-single-line = false
known-first-party = ["llm_jp_eval"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder"
]

[tool.ruff.format]
# Black compatibility
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
plugins = ['pydantic.mypy']

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore::UserWarning',
    'ignore::DeprecationWarning'
]
