[project]
name = "inference-modules-transformers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "llm-jp-eval-inference",
    "torch>=2.4.0",
    "transformers>=4.45.1",
    "vllm==0.10.1+gptoss",
]

[tool.uv]
no-binary-package = ["pyairports"]
extra-index-url = [
    "https://wheels.vllm.ai/gpt-oss/",
    "https://download.pytorch.org/whl/nightly/cu128"
]
index-strategy = "unsafe-best-match"
prerelease = "allow"
override-dependencies = [
    "tenacity>=9.1.2",
]

[tool.uv.sources]
llm-jp-eval-inference = { path = "../../", editable = true }
